# WyckoffTradingAgent

./: .env.example  .gitignore  GLOSSARY.md  README.md  README_STRATEGY.md  mcp_server.py  pyproject.toml
.metrics/: func_whitelist.json  loc.json
agents/: chat_tools.py
cli/: __main__.py  _provider_factory.py  agent.py  auth.py  commands.py  compaction.py  dashboard.py  loop_guard.py  memory.py  model_metadata.py  model_registry.py  runtime.py  sub_agents.py  tools.py  tui.py
core/: candidate_policy.py  candidate_selection_score.py  cash_portfolio.py  constants.py  dynamic_policy.py  funnel_pipeline.py  intraday_analysis.py  price_action_footprint.py  prompts.py  sector_rotation.py  signal_confirmation.py  signal_feedback.py  tail_buy_strategy.py  wyckoff_engine.py
docs/: ARCHITECTURE.md  A_SHARE_FUNNEL_FLOW.md  BACKTEST_MARKET_REPORT.md  BACKTEST_US_REPORT.md  COST_MODEL.md  ITERATION_STRATEGY.md  README_EN.md  README_ES.md  README_JA.md  README_KO.md  SIGNAL_FEEDBACK_LOOP.md
integrations/: _llm_types.py  data_source.py  local_db.py  rag_veto.py  strategy_api_client.py  supabase_portfolio.py  supabase_recommendation.py  supabase_signal_feedback.py
scripts/: ashare_l4_abc_backtest.py  backfill_recommendation_tracking.py  backtest_runner.py  backtest_snapshot_fetch.py  daily_job.py  holding_diagnosis_job.py  market_funnel_job.py  recommendation_tracking_reprice_job.py  review_list_replay.py  sector_continuity_report.py  signal_feedback_job.py  step3_batch_report.py  step4_rebalancer.py  strategy_attribution_report.py  tail_buy_intraday_job.py  theme_radar_job.py  trigger_tail_buy_workflow.py  update_backtest_market_report.py  us_backtest_strategy_replay.py  web_background_job.py  wyckoff_funnel.py
tests/: test_agent_loop.py  test_ashare_l4_abc_backtest.py  test_backtest_entry_price.py  test_backtest_selection.py  test_batch_report.py  test_cash_portfolio.py  test_chat_tools_auth.py  test_claude_provider.py  test_cli_provider_factory.py  test_compaction.py  test_daily_job_preview.py  test_holding_diagnosis_job.py  test_intraday_analysis.py  test_intraday_rescue.py  test_memory.py  (+26 more)
(+63 files in other folders)
